Started Accessory creation

--- a/B&B_App/Components/Displays/AccessoryCreatorDisplay.razor
+++ b/B&B_App/Components/Displays/AccessoryCreatorDisplay.razor
@@ -17,8 +17,7 @@
 
 
 @code {
-
     [Parameter]
-    public List<RoomAccessory> RoomAccessories { get; set; }
+    public List<RoomAccessory> RoomAccessories { get; set; } = new List<RoomAccessory>();
 
 }
