--- a/B&B_App/Pages/RoomEditor.razor
+++ b/B&B_App/Pages/RoomEditor.razor
@@ -37,14 +37,45 @@
 
     </MudCardContent>
 
+</MudCard>
+
+<MudDivider DividerType="DividerType.FullWidth"></MudDivider>
+
+<MudCard>
     <MudCardContent>
         <MudGrid>
+
             <MudItem>
-                <AccessoryCreatorDisplay RoomAccessories="_accessories"></AccessoryCreatorDisplay>
+                <MudGrid>
+                    <MudItem xs="4">
+                        <DropDown TItem="RoomAccessory" OnSelected="AccessorySelected">
+                            <InitialTip>Select Accessory</InitialTip>
+                            <ChildContent>
+
+                                @foreach (var item in _accessories)
+                                {
+                                    <DropDownItem Item="item">@item.Type</DropDownItem>
+                                }
+
+                            </ChildContent>
+                        </DropDown>
+                    </MudItem>
+
+                    <MudItem xs="12">
+                        <AccessoryCreatorDisplay ItemDeleted="AccessoryDeleted" RoomAccessories="_roomAccessories"></AccessoryCreatorDisplay>
+
+                    </MudItem>
+                </MudGrid>
+
+
             </MudItem>
         </MudGrid>
     </MudCardContent>
+</MudCard>
 
+<MudDivider DividerType="DividerType.FullWidth" Absolute="true" Light="true"></MudDivider>
+
+<MudCard>
     @if (_pictures.Any())
     {
         <MudCardContent>
@@ -98,7 +129,10 @@
     private List<Picture> _pictures = new List<Picture>();
     private Picture _addedPicture = new Picture();
     private List<Picture> _picturesToDelete = new List<Picture>();
+    private List<RoomAccessory> _roomAccessories = new List<RoomAccessory>();
     private List<RoomAccessory> _accessories = new List<RoomAccessory>();
+    private List<RoomAccessory> _accessoriesToBeRemoved = new List<RoomAccessory>();
+    private RoomAccessory _selectedAccessory;
     private IBrowserFile? file;
     private ErrorManager _errorManager;
 
@@ -116,7 +150,8 @@
         {
             //if (loginManager.IsLandLord(_user.Id))
             _room = await _roomService.Get(RoomId);
-
+            _accessories = await _accessoryService.GetAllAccessories();
+            _roomAccessories = await _roomService.GetRoomAccessories(RoomId);
             _pictures = await _pictureService.GetRoomPictures(RoomId);
         }
         catch (Exception)
@@ -125,12 +160,33 @@
         }
     }
 
+    private void AccessorySelected(RoomAccessory roomAccessory)
+    {
+        _selectedAccessory = roomAccessory;
+        if (_roomAccessories.Contains(roomAccessory) == false)
+            _roomAccessories.Add(roomAccessory);
+    }
+
+    private void AccessoryDeleted(RoomAccessory roomAccessory)
+    {
+        _accessoriesToBeRemoved.Add(roomAccessory);
+    }
+
     private async void SaveChanges()
     {
         if (_room.Id == 0)
             await _roomService.Create(_room);
         else
             await _roomService.Update(_room);
+
+        _room.RoomAccessories = _roomAccessories;
+        await _roomService.AddAccessoriesToRoom(_room);
+
+        if (_accessoriesToBeRemoved.Any())
+        {
+            _room.RoomAccessories = _accessoriesToBeRemoved;
+            await _roomService.RemoveAccessoryFromRoom(_room);
+        }
 
         StateHasChanged();
     }
@@ -154,7 +210,7 @@
 
         return "";
     }
-    
+
     #region Picture functions
     private void SelectPicture(int id)
     {
