Detailpage now showing accessories

--- a/B&B_App/Components/Displays/AccessoryCreatorDisplay.razor
+++ b/B&B_App/Components/Displays/AccessoryCreatorDisplay.razor
@@ -1,5 +1,5 @@
 ﻿
-<MudGrid >
+<MudGrid>
     <MudItem xs="12">
         <MudText>
             Room Accessories
@@ -7,9 +7,19 @@
     </MudItem>
     @foreach (var item in RoomAccessories)
     {
-        <MudItem xs="2">
+        if (AbleToDelete)
+        {
+            <MudItem xs="2">
                 <MudButton ButtonType="ButtonType.Button" Size="Size.Small" Variant="Variant.Filled" IconSize="Size.Small" Color="Color.Error" StartIcon="@Icons.Material.Filled.Delete" @onclick="() => DeleteAccessory(item.Id)">@item.Type.ToString()</MudButton>
-        </MudItem>
+            </MudItem>
+        }
+        else
+        {
+            <MudItem xs="2">
+                <MudButton ButtonType="ButtonType.Button" Size="Size.Small" Variant="Variant.Filled" Color="Color.Surface">@item.Type.ToString()</MudButton>
+            </MudItem>
+        }
+
     }
 </MudGrid>
 
@@ -21,13 +31,19 @@
     [Parameter]
     public EventCallback<RoomAccessory> ItemDeleted { get; set; }
 
+    [Parameter]
+    public bool AbleToDelete { get; set; } = true;
+
     private void DeleteAccessory(int id)
     {
-        var selectedAccessory = RoomAccessories.FirstOrDefault(x => x.Id == id);
-        if (selectedAccessory == null)
-            return;
-            
-        ItemDeleted.InvokeAsync(selectedAccessory);
-        RoomAccessories.Remove(selectedAccessory);
+        if (AbleToDelete)
+        {
+            var selectedAccessory = RoomAccessories.FirstOrDefault(x => x.Id == id);
+            if (selectedAccessory == null)
+                return;
+
+            ItemDeleted.InvokeAsync(selectedAccessory);
+            RoomAccessories.Remove(selectedAccessory);
+        }
     }
 }
