Fixed build errors

--- a/B&B_App/Pages/Details.razor
+++ b/B&B_App/Pages/Details.razor
@@ -92,7 +92,7 @@
                 </MudItem>
 
                 <MudItem xs="12">
-                    <AccessoryCreatorDisplay AbleToDelete="false" RoomAccessories="room.RoomAccessories"></AccessoryCreatorDisplay>
+                    <AccessoryCreatorDisplay AbleToDelete="false" RoomAccessories="room.Accessories"></AccessoryCreatorDisplay>
                 </MudItem>
 
                 <MudItem xs="12">
